--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,17 +19,18 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/refrakt-hub/refrakt"
+Homepage = "https://github.com/refrakt-hub/refrakt"
 "Bug Tracker" = "https://github.com/refrakt-hub/refrakt/issues"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=7.0.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
     "mypy>=1.0.0",
     "isort>=5.12.0",
 ]
+
 
 [tool.uv.workspace]
 members = [
